2012-03-01 Borut Razem <borut.razem AT siol.net>

	* links.php: "Links - LCD Stuff" is back, thanks to Dave Helton
	  who provided the backup copy of lcd directory

2012-02-28 Borut Razem <borut.razem AT siol.net>

	* links.php: applied requests from Wbdocs tracker:
	  #3486131: Broken links,
	  #3407481: Links - General,
	  #2986975: New Link for SDCC,
	  #2298395: KTechLab,
	  #1807915: KiCAD link

2012-02-26 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added GNU Binutils development team to external sources;
	  removed Conservative garbage collector for C & C++
	  from extrnal sources since it is not used by sdcc any more

2012-01-23 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  changed gbz80 status from unmaintained to experimental

2011-11-28 Borut Razem <borut.razem AT siol.net>

	* index.php: corrected PastNews, dedication to Dennis M. Ritchie

2011-11-27 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 release

2011-11-22 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 RC3

2011-11-18 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 RC2
	* previous.php: added old news

2011-11-06 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 RC1

2011-10-17 Borut Razem <borut.razem AT gmail.net>

	* index.php: added dedication to Dennis M. Ritchie

2011-10-14 Borut Razem <borut.razem AT gmail.net>

	* index.php: added Leland Morrison to the developers list,
	  added Rabbit 2000 and z180 targets, adde basic long long support

2011-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* snap.php: show time as UTC

2011-08-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* snap_header.php: added max-age=3600 header for caching browsers

2011-06-21 Borut Razem <borut.razem AT gmail.net>

	* regtest.php: removed XHTML 1.0 validation errors
	* index.php, snap_header.php, previous.php, links.php:
	  style.css moved to styles/
