@@ -1,3 +1,7 @@
+2012-03-02 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: updated chapter "Who is SDCC?", ...
+
 2012-03-01 Borut Razem <borut.razem AT siol.net>
 
 	* links.php: "Links - LCD Stuff" is back, thanks to Dave Helton
